Fix chat number align

--- a/app/styles/common.css
+++ b/app/styles/common.css
@@ -553,7 +553,7 @@ dialog::backdrop {
 
 .tab__number {
   color: var(--theme);
-  margin-left: var(--s-2);
+  margin-inline-start: var(--s-2);
 }
 
 .tab__button:focus-visible {
